GNOME Bugzilla – Bug 761428
GtkLevelBar no longer expands vertically
Last modified: 2016-02-05 11:00:39 UTC
Created attachment 320229 [details] levelbar demonstration In gtk 3.19, the GtkLevelBar trough no longer expands to the height of the widget. Attaching images.
Created attachment 320230 [details] 3.18 levelbar The program run with gtk-3.18.2
Created attachment 320231 [details] 3.19 levelbar The program run with gtk-3.19.7
Created attachment 320490 [details] how it looks here I can't reproduce this with current master.
found that this only affects discrete level bars